syntax = "proto3";

package acproto;

message AppInfo {
    string appName = 1;
    string appVersion = 2;
    string appChannel = 3;
    string sdkVersion = 4;
    string linkVersion = 5;
    map<string, string> extensionInfo = 11;
}
