syntax = "proto3";

package acproto;

message UnregisterRequest {}

message UnregisterResponse {}
