syntax = "proto3";

package acproto;

import "ZtLiveUserInfo.proto";

message AuthorChatPlayerInfo {
	ZtLiveUserInfo player = 1;
	string liveId = 2;
	bool enableJumpPeerLiveRoom = 3;
}
