syntax = "proto3";

package acproto;

message ZtLiveCsUserExit {}

message ZtLiveCsUserExitAck {}
